tests/expectations/passes/check_interfaces/missing_record_fail.out
Error [ECHI03712003]: Program `test` implements interface `test.aleo/TokenStandard` but is missing the required record `Token`.
    --> test:8:1
     |
   8 | program test.aleo : TokenStandard {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   9 |     // Missing Token record
     |     ^^^^^^^^^^^^^^^^^^^^^^^
  10 |     fn transfer(amount: u64) -> u64 {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  11 |         return amount;
     |         ^^^^^^^^^^^^^^
  12 |     }
     |     ^
  13 | 
  14 |     fn main(x: u64) -> u64 {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^
  15 |         return transfer(x);
     |         ^^^^^^^^^^^^^^^^^^^
  16 |     }
     |     ^
  17 | }
     | ^
     |
     = Add a record definition with the specified name.
